<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/vFondu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtFondu" />

    <Button
        android:id="@+id/vRetrecissement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtRetrecissement" />

    <Button
        android:id="@+id/vSortie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtSortie" />

    <Button
        android:id="@+id/vFonduAgrandissement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtFonduRetrecissement" />

    <Button
        android:id="@+id/vTvOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtTV" />

    <Button
        android:id="@+id/vReapparition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtBtReapparition"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="3000" />

        <TextView
            android:id="@+id/tvAnimDuration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>